Fixed button alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -165,5 +165,5 @@ abbr[title] {
   
 .site-combo {margin-left:40px;float:left;}
 
-.dashboard-show {display: none; float: right; margin: 6px;}
+.dashboard-show {display: none; float: right; margin: 6px; padding-top: 5px;}
 
